# Auto-Dock

./: README.md
arucoDetection/: CMakeLists.txt  README.md  package.xml
arucoDetection/launch/: detection_drone.launch  detection_rover.launch
arucoDetection/msg/: ArucoMsg.msg
arucoDetection/src/: ArucoDetect.cpp  ArucoDetect.h  aruco_detect_cam.cpp  caliberateCamera.py  kalmanFilter.cpp
mybot_control/: CMakeLists.txt  package.xml
mybot_control/msg/: ArucoMsg.msg
mybot_control/src/: cubic_bezier.cpp  find_tf.cpp  parabolic_controller.cpp  path_follower.cpp  spline_controller.py  velocity_publisher.cpp
mybot_description/: package.xml
mybot_description/launch/: mybot_rviz.launch
mybot_description/meshes/: 200MM_WHEEL.STL  EV_Charging_Station.stl  LIDARS_A3M1.STL  castor_wheel_assembly.STL
mybot_description/urdf/: mybot.gazebo  mybot.xacro  zmr_300.urdf
mybot_gazebo/: CMakeLists.txt  package.xml
mybot_gazebo/launch/: display.launch  mybot_world.launch  simulation.launch  zmr.launch
mybot_gazebo/rviz/: zmr_sim_vis.rviz
mybot_gazebo/src/: edge_detect_laser.cpp  odometry_publisher.cpp
mybot_gazebo/src/Media/: test.py
mybot_gazebo/worlds/: charging_station.world  charging_test.world  warehouse_with_tags.world
mybot_navigation/: CMakeLists.txt  package.xml
mybot_navigation/launch/: amcl.launch  mapping.launch
mybot_navigation/maps/: warehouse_with_tags.pgm  warehouse_with_tags.yaml
mybot_navigation/params/: amcl_params.yaml
mybot_navigation/src/: path_planner.cpp
realsense2_camera/src/: stream_images_realsense.cpp
